# fada

./: CMakeLists.txt  LICENSE  fadainstall.py
libcpp/: CMakeLists.txt
libcpp/include/Alat/: alatio.h  armadillo.h  assemblematrix.h  assemblevector.h  bicgstab.h  cg.h  dataformathandler.h  directoryandfileexists.h  doublematrix.h  doublevector.h  enums.h  fgmres.h  filescanner.h  fixarray.h  gaussseidelpreconditioner.h  gaussseidelvariablediagonalmatrix.h  getlinesplit.h  ghost.h  ghostcouplingmatrix.h  ghostlinearsolver.h  ghostmatrix.h  ghostvector.h  gmres.h  ilupreconditioner.h  iluvariablematrix.h  interfacebase.h  intvector.h  iomanager.h  iterationinfo.h  iterativesolvervisitorinterface.h  iterativesolvervisitorwithvectorinterface.h  iterativesolverwithpreconditioner.h  iterativesolverwithvisitor.h  linearsolverinterface.h  linescanner.h  map.h  matrix.h  matrixallvariables.h  matrixinterface.h  newtondata.h  (+67 more)
libcpp/include/Fada/: angle.h  application.h  applicationinterface.h  applicationwithexactsolution.h  boundarymanager.h  changeintegrationpoint.h  chronometer.h  chronometertraits.h  constantfunction.h  data.h  datafunction.h  datafunctionvector.h  datainterface.h  datamap.h  directsolver.h  dirichletconditionfrominitialcondition.h  dirichletinterface.h  dirichletwithexactsolution.h  dirichletzero.h  dofinformation.h  dofinformationinterface.h  dofinformationwithoutfem.h  dofmanagerallvariables.h  domaindecomposition.h  domaindecompositionsmoother.h  domaindecompositionsplitvars.h  domainintegrationloop.h  domainintegrationloopinterface.h  domainmodel.h  domainmodelinterface.h  domainsolver.h  domainsolverinterface.h  dynamicloop.h  dynamicpostprocessloop.h  (+137 more)
python/: CMakeLists.txt
python/mesh/: bidule2.py  hexregular.py  optimal.py  optimal2.py  optimal3.py
python/tools/: pyfcompile.py  pyfparam.py  pyfpathmanager.py  pyfrunexecutable.py  replaceinfile.py
(+605 files in other folders)
