#-----------------------------#
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(Fada)

SET(CMAKE_MODULE_PATH ${Fada_SOURCE_DIR}/CMakeModules)
INCLUDE(FadaOptions)
INCLUDE(FadaFindExternalLibraries)
SET(Fada_LIBRARY_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/lib${CMAKE_BUILD_TYPE})
SET(Fada_INCLUDE_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/include)
INCLUDE_DIRECTORIES(${ARMADILLO_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Fada_SOURCE_DIR}/libcpp/include)

set(CMAKE_MACOSX_RPATH 1)
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
set(CMAKE_INSTALL_RPATH ${Fada_LIBRARY_INSTALL_DIR})

ADD_SUBDIRECTORY(libcpp)
ADD_SUBDIRECTORY(bin)
ADD_SUBDIRECTORY(python)
ADD_SUBDIRECTORY(CMakeModules)
#-----------------------------#
