#---- libcpp

SET(DIRECTORIES
Alat
FadaMesh
Fada
Integrators
)

FOREACH(DIRECTORY ${DIRECTORIES})
  AUX_SOURCE_DIRECTORY(src/${DIRECTORY} SRC)
ENDFOREACH(DIRECTORY)


ADD_LIBRARY(fadalib ${SRC})
TARGET_LINK_LIBRARIES(fadalib ${Fada_EXTERNAL_LIBRARIES})
INSTALL(TARGETS fadalib DESTINATION ${Fada_LIBRARY_INSTALL_DIR})

FOREACH(DIRECTORY ${DIRECTORIES})
  FILE(GLOB HFILES include/${DIRECTORY}/*.h)
  INSTALL(FILES ${HFILES} DESTINATION ${Fada_INCLUDE_INSTALL_DIR}/${DIRECTORY})
ENDFOREACH(DIRECTORY)
