#---- python 
FILE(GLOB PYBINFILES ${CMAKE_CURRENT_SOURCE_DIR}/bin/*.py)
#message("PYBINFILES ${PYBINFILES}")
FOREACH(PYBINFILE ${PYBINFILES})
	INSTALL( FILES ${PYBINFILE}
			 DESTINATION pyfadalight
			 PERMISSIONS OWNER_EXECUTE OWNER_READ GROUP_READ WORLD_READ
			)
	get_filename_component(name ${PYBINFILE} NAME_WE)
	CONFIGURE_FILE(
	         ${CMAKE_CURRENT_SOURCE_DIR}/bin/${name}.in
			 ${CMAKE_CURRENT_BINARY_DIR}/bin/${name} @ONLY
			)
	INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/bin/${name}
			DESTINATION bin)
ENDFOREACH()
